Wed Aug 15 12:06:43 CEST 2001 Daniel Veillard <daniel@veillard.com>

	* libexslt/common.c libexslt/math.c libxslt/Makefile.am
	  libxslt/libxslt.h libxslt/xsltconfig.h.in: cleanup of includes
	  export xsltconfig.h at make install stage

Tue Aug 14 20:51:09 MDT 2001 John Fleck <jfleck@inkstain.net>

	* doc/xslt.html updated xsltproc description with the many new
	  command line options Daniel has added, cleaned up some spelling

Tue Aug 14 18:41:02 CEST 2001 Daniel Veillard <daniel@veillard.com>

	* libxslt/extra.c libxslt/keys.c libxslt/templates.c 
	  libxslt/transform.c libxslt/variables.c libxslt/xsltutils.c:
	  serious changes on Result Value Trees and NodeSets
	  w.r.t. deallocation and collect operations. Probably not
	  100% clean (merge of allocated trees smells like a problem).
	  Seems sufficient to close #58943 . Also check if XPath evaluations
	  failed, and in this case stops the processing and avoid
	  going further, goal is to not segfault on broken XSLT.

Tue Aug 14 15:32:08 CEST 2001 Daniel Veillard <daniel@veillard.com>

	* libxslt/pattern.c libxslt/transform.c: trying to kill bug #58878,
	  some associated serious cleanup in the pattern code.
	* tests/docbook/result/*: regenerated all the results for the
	  docbook testsuite. Seems killing #58878 also changes the
	  fo results seriously.
	* tests/docs/Makefile.am tests/docs/bug-5[56].xml 
	  tests/general/Makefile.am tests/general/bug-5[56].*: added
	  2 more tests

Tue Aug 14 05:01:30 CEST 2001 Thomas Broyer <tbroyer@ltgt.net>

	* libxslt/xslt.c libxslt/xsltInternals.h libxslt/transform.c
	  libxslt/extra.[ch] libxslt/extensions.c libxslt/preproc.[ch]:
	  fixed compilation warnings due to recent changes to the extension
	  framework.
	* libxslt/preproc.[ch] libexslt/common.c
	  fixed the precomputation of *:document elements
	* libxslt/functions.h: fixed a compilation warning

Mon Aug 13 11:41:02 CEST 2001 Daniel Veillard <daniel@veillard.com>
