@@ -57,14 +57,6 @@
 int xsltMaxDepth = 500;
 
 /*
- * Cleanup when propagated in official libxml release
- */
-typedef xmlXPathFunction
-	(*xmlXPathFuncLookupFunc)	(void *ctxt,
-					 const xmlChar *name,
-					 const xmlChar *ns_uri);
-
-/*
  * Useful macros
  */
 
